[package]
name = "cairo"
version = "0.0.4"
description = "Cairo bindings"
license = "CC0-1.0"
homepage = "https://github.com/passcod/rust-cairo"
repository = "https://github.com/passcod/rust-cairo.git"
authors = [
  "FeÌlix Saparelli <felix@passcod.name>",
  "Tal Levy <tal@fastmail.com>",
  "faineance",
  "Jordan Miner <jminer7@gmail.com>"
]

[dependencies]
num = "0.1.31"
libc = "0.2.9"
